kustomize/overlays/staging/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    environment: staging
    app: mern-stack
