kustomize/overlays/staging/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: staging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-frontend-service
                port:
                  number: 5173
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: staging-backend-service
                port:
                  number: 8000
